0.3.4 SVN/Unreleased
====================

  - Make Source Checkout retry up to 3 times, 10 seconds
    apart. Somehow later versions of buildbot seem to fail much more
    often when removing the checkout directory, and hopefully this
    will work around that.
    [sidnei]

  - Make Source Checkout mode configurable through ``vcs-mode``.
    [sidnei]

  - Make ``build`` steps set ``haltOnFailure=True``. No point in doing
    any testing if the build steps failed.
    [sidnei]

  - Fixed compatibility problem with buildbot 0.7.9
    [dokai]

  - Fixed problem with the test suite initialization which resulted in all the
    doctests not being run. Also fixed test regressions that had surfaced
    undetected because of the problem.
    [dokai]

0.3.3 (2008-09-26)
==================

  - Apply patch from Chris Shenton to override default umask
    [gawel]

  - Improve default template configuration
    [gawel]

  - Add clean css to template
    [gawel]

0.3.2 (2008-09-14)
==================

  - Add paster template to quickly generate a basic configuration
    [gawel]

  - Fixed occurrences of `email-notification-recipients` to the singular form
    as used in most places.
    [hannosch]

  - Added a mechanism to have username/password for Subversion authentication
    Which consists of a buildbot patch and a link to .httpauth on buildout side
    [tarek]

  - Add dependency between projects. The build of one project can
    trigger the build of one other. [thefunny]

  - Improve the virtual env creation for Windows (mingw) and Cygwin.
    Installation of eggs works with mingw, and we should get a python
    ../../bin/python for Cygwin as well (symlink to the python used to
    run buildout). [thefunny]

0.3.1 (2008-05-31)
==================

  - Fixed poller documentation and examples [mustapha]

  - Fixed failed tests when your executable is called something other
    than python, e.g python2.4 [mustapha]

0.3.0 (2008-05-28)
==================
